--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/img/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- ===========================
