--- a/index.html
+++ b/index.html
@@ -395,6 +395,39 @@
     <!-- ===========================
     testimonial part end
      ============================= -->
+    <!-- ===========================
+     contact part start
+     ============================= -->
+
+     <section class="contact">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-5">
+            <img src="./images/contactImage.png" alt="">
+          </div>
+          <div class="col-lg-7">
+            <div class="title title2">
+              <h4>Get In Touch</h4>
+              <h2>Feel Free to Contact</h2>
+            </div>
+
+            <div class="input_box">
+              <input placeholder="Enter Name" class="input" type="text">
+              <input placeholder="Enter Email" class="input" type="text">
+              <input placeholder="Enter Phone" class="input" type="text">
+              <input placeholder="Enter Subject" class="input" type="text">
+              <textarea placeholder="Enter Message" class="input input5" type="text"></textarea>
+            </div>
+            <div class="commonBtn">
+              <a href="">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- ===========================
+     contact part end
+     ============================= -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
