--- a/index.html
+++ b/index.html
@@ -428,6 +428,39 @@
     <!-- ===========================
      contact part end
      ============================= -->
+    <!-- ===========================
+     Footer part start
+     ============================= -->
+
+        <section class="footer">
+          <div class="container">
+            <img src="./images/footerLogo.png" alt="">
+
+            <div class="ulOne">
+              <ul class="d-flex justify-content-center gap-3">
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li class="lastLI">Contract</li>
+              </ul>
+            </div>
+            <div class="ulTwo">
+              <ul class="d-flex gap-5 justify-content-center">
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-linkedin-in"></i></li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="copy">
+          <p>Copyright © 2023 Design By Estiak. All rights reserved.</p>
+        </section>
+    <!-- ===========================
+     Footer part end
+     ============================= -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
