--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <!-- ===========================
@@ -35,7 +36,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span><i class="fa-solid fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
@@ -93,7 +94,7 @@
           <h4>MY SERVICES</h4>
           <h2>Provide Wide Range of Digital Services</h2>
         </div>
-        <div class="row">
+        <div class="row row-gap-5">
           <div class="col-lg-4">
             <div class="card" style="width: 18rem">
               <img
@@ -160,7 +161,7 @@
 
     <section class="about">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row  align-items-center">
           <div class="col-lg-6">
             <div class="d-flex justify-content-between">
               <img class="fristImage" src="./images/aboutImage1.png" alt="" />
@@ -201,7 +202,7 @@
 
       <section class="progresber">
         <div class="container">
-          <div class="row">
+          <div class="row row-gap-4">
             <div class="col-lg-3">
               <div class="box">
                 <div class="progresber_box">
